--- a/intranet_client/src/styles/Navbar.css
+++ b/intranet_client/src/styles/Navbar.css
@@ -28,3 +28,35 @@
     font-size: 14px;
     margin: 0;
 }
+
+.sp-dropdown {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  padding: 0.5rem 0;
+}
+
+.sp-dropdown-items {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sp-dropdown-items li {
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+}
+
+.sp-dropdown-items li:hover {
+  background-color: #f5f5f5;
+}
+
+.sp-menu-item:hover > .sp-dropdown {
+  display: block;
+}
