--- a/intranet_client/src/styles/Galerie/CategoryList.css
+++ b/intranet_client/src/styles/Galerie/CategoryList.css
@@ -1,8 +1,50 @@
 .CategoryList {
-  margin-top: 0% !important;
+    /*margin-top: 1% !important;*/
+    margin-top: 5% !important;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+
+
+}
+
+
+.CategoryList2 { /* Grid Catégorie*/
+    padding: 20px !important;
+    min-height: 100%;
+    min-width: 33%;
+}
+
+.CategoryList3 { /*Div catégorie*/
+    /*border: rgb(17, 157, 174) 1px solid;*/
+
+    min-height: 100%;
+    min-width: 100%;
+
+
+}
+
+.CategoryList4 { /* button catégorie*/
+    min-height: 100%;
+    min-width: 100%;
+
+
+}
+
+.Img_Cadre { /*carré de l image*/
+    display: inline !important;
+    max-height: 300px;
+    max-width: 300px;
+    min-height: 300px;
+    min-width: 100%;
+    transition: transform .1s;
+}
+
+.CategoryList2:hover { /*carré de l image*/
+    -ms-transform: scale(1.05); /* IE 9 */
+    -webkit-transform: scale(1.05); /* Safari 3-8 */
+    transform: scale(1.05);
 }
 
 .CategoryList .card-media {
-  height: 25%; /* Vous pouvez ajuster cette valeur en fonction de vos préférences */
-  width: 100%; /* Vous pouvez ajuster cette valeur en fonction de vos préférences */
+
 }
