--- a/intranet_client/src/styles/ArticleList.css
+++ b/intranet_client/src/styles/ArticleList.css
@@ -1,5 +1,3 @@
-
-
 .modal {
     height: 100%;
     width: 100%;
@@ -68,7 +66,7 @@ label {
 
 .articleList-img {
     width: 100%;
-    height: 280px;
+    height: 250px;
     display: block;
     border-radius: 3px;
 }
@@ -79,7 +77,7 @@ label {
     border-radius: 10px;
     transition: all 1.2s;
     width: 100%;
-    height: 400px;
+    height: 100%;
     margin: 10px;
 
 }
@@ -87,6 +85,43 @@ label {
 .articleList-item:hover {
     transform: scale(1.05);
 }
+
+.articlelist-title {
+    font-size: 1.375rem !important;
+}
+
+.article-content {
+    font-family: helvetica;
+}
+
+.readmore {
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+}
+
+.pagination {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 20px;
+}
+
+.pagenumber {
+  text-align: right;
+  margin-bottom: 10px;
+}
+
+.pagination-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.pagination-buttons button {
+  margin: 0 5px;
+}
+
+
 
 @media (max-width: 700px) {
     .form {
